# openapi.yaml
@@ -74,7 +74,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Filme'          
+                $ref: '#/components/schemas/Filme'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -134,7 +134,7 @@ paths:
           description: Não foram encontrados dados de retorno
         '500':
           description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
-  
+
   /v1/locadora/genero:
     get:
       tags:
@@ -193,7 +193,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Genero'          
+                $ref: '#/components/schemas/Genero'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -312,7 +312,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Cargo'          
+                $ref: '#/components/schemas/Cargo'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -431,7 +431,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Producao'          
+                $ref: '#/components/schemas/Producao'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -550,7 +550,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FormatoAudiovisual'          
+                $ref: '#/components/schemas/FormatoAudiovisual'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -669,7 +669,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Distribuidora'          
+                $ref: '#/components/schemas/Distribuidora'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -788,7 +788,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Personagem'          
+                $ref: '#/components/schemas/Personagem'
         '400':
           description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
         '404':
@@ -848,6 +848,244 @@ paths:
           description: Não foram encontrados dados de retorno
         '500':
           description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+
+  /v1/locadora/profissional:
+    get:
+      tags:
+        - profissional
+      summary: Busca todos os profissionais
+      description: Retorna uma lista de profissionais
+      responses:
+        '200':
+          description: Requisição bem sucedida
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Profissional'
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    post:
+      tags:
+        - profissional
+      summary: Cria um profissional
+      description: Cria um novo profissional
+      requestBody:
+        description: Cria um novo profissional
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profissional'
+        required: true
+      responses:
+        '201':
+          description: Item criado com sucesso
+        '400':
+          description: Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '415':
+          description: Não foi possível processar a requisição, pois o tipo de dados enviado no corpo deve ser JSON
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+  /v1/locadora/profissional/{id}:
+    get:
+      tags:
+        - profissional
+      summary: Busca um profissional pelo ID
+      description: Retorna um profissional pelo ID
+      parameters:
+        - name: id
+          in: path
+          description: ID do profissional de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Requisição bem sucedida
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Profissional'
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    put:
+      tags:
+        - profissional
+      summary: Atualiza um profissional existente
+      description: Atualiza um profissional existente pelo ID
+      parameters:
+        - name: id
+          in: path
+          description: ID do profissional de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Atualiza um profissional existente
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profissional'
+        required: true
+      responses:
+        '200':
+          description: Item atualizado com sucesso
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '415':
+          description: Não foi possível processar a requisição, pois o tipo de dados enviado no corpo deve ser JSON
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    delete:
+      tags:
+        - profissional
+      summary: Apaga um profissional
+      description: Excluir um profissional
+      parameters:
+        - name: id
+          in: path
+          description: ID do profissional de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Item apagado com sucesso
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+
+  /v1/locadora/classificacao-indicativa:
+    get:
+      tags:
+        - classificacaoIndicativa
+      summary: Busca todas classificações
+      description: Retorna uma lista de classificações
+      responses:
+        '200':
+          description: Requisição bem sucedida
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClassificacaoIndicativa'
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    post:
+      tags:
+        - classificacaoIndicativa
+      summary: Cria uma classificacao
+      description: Cria uma nova classificacao
+      requestBody:
+        description: Cria uma nova classificacao
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClassificacaoIndicativa'
+        required: true
+      responses:
+        '201':
+          description: Item criado com sucesso
+        '400':
+          description: Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '415':
+          description: Não foi possível processar a requisição, pois o tipo de dados enviado no corpo deve ser JSON
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+  /v1/locadora/classificacao-indicativa/{id}:
+    get:
+      tags:
+        - classificacaoIndicativa
+      summary: Busca um classificacao pelo ID
+      description: Retorna um classificacao pelo ID
+      parameters:
+        - name: id
+          in: path
+          description: ID do classificacao de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Requisição bem sucedida
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClassificacaoIndicativa'
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    put:
+      tags:
+        - classificacaoIndicativa
+      summary: Atualiza um classificacao existente
+      description: Atualiza um classificacao existente pelo ID
+      parameters:
+        - name: id
+          in: path
+          description: ID do classificacao de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Atualiza um classificacao existente
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClassificacaoIndicativa'
+        required: true
+      responses:
+        '200':
+          description: Item atualizado com sucesso
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '415':
+          description: Não foi possível processar a requisição, pois o tipo de dados enviado no corpo deve ser JSON
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
+    delete:
+      tags:
+        - classificacaoIndicativa
+      summary: Apaga um classificacao
+      description: Excluir um classificacao
+      parameters:
+        - name: id
+          in: path
+          description: ID do classificacao de retorno
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Item apagado com sucesso
+        '400':
+          description: (referente a validação do ID) - Não foi possível processar a requisição pois existem campos obrigatórios que devem ser encaminhados e antedidos conforme documentação
+        '404':
+          description: Não foram encontrados dados de retorno
+        '500':
+          description: Não foi possível processar a requisição devido a erros internos no servidor (CONTROLLER ou MODELAGEM DE DADOS)
 components:
   schemas:
     Filme:
@@ -857,6 +1095,10 @@ components:
         - duracao
         - orcamento
         - capa
+        - id_distribuidora
+        - id_classificacao
+        - id_producao
+        - id_formato_audiovisual
       properties:
         id:
           type: integer
@@ -883,6 +1125,32 @@ components:
           type: string
           maxLength: 200
           nullable: false
+        id_distribuidora:
+          type: number
+          nullable: false
+        id_classificacao:
+          type: number
+          nullable: false
+        id_producao:
+          type: number
+          nullable: false
+        id_formato_audiovisual:
+          type: number
+          nullable: false
+        genero:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+        personagem:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
     Genero:
       type: object
       required:
@@ -929,6 +1197,13 @@ components:
         site:
           type: string
           maxLength: 255
+        profissional:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
     FormatoAudiovisual:
       type: object
       required:
@@ -984,3 +1259,65 @@ components:
           type: string
           maxLength: 100
           nullable: false
+        ator:
+          type: array
+          items:
+            type: object
+            properties:
+              id_profissional:
+                type: integer
+              idioma:
+                type: integer
+    Profissional:
+      type: object
+      required:
+        - nome
+        - data_nascimento
+        - nacionalidade
+      properties:
+        id:
+          type: number
+        nome:
+          type: string
+          maxLength: 100
+          nullable: false
+        data_nascimento:
+          type: string
+          example: yyyy-mm-dd
+          nullable: false
+        data_falecimento:
+          type: string
+          example: yyyy-mm-dd
+        nacionalidade:
+          type: string
+          maxLength: 50
+          nullable: false
+        imagem:
+          type: string
+          maxLength: 255
+        biografia:
+          type: string
+        cargo:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+    ClassificacaoIndicativa:
+      type: object
+      required:
+        - descricao
+        - nivel
+      properties:
+        id:
+          type: integer
+        descricao:
+          type: string
+          maxLength: 50
+          nullable: false
+        nivel:
+          type: string
+          maxLength: 5
+          nullable: false
+
